import ui.MenuWindow;

public class Tetris {
    public static void main(String[] args) {
        MenuWindow menuWindow = new MenuWindow();
        menuWindow.initWindow();
        menuWindow.initComponent();
    }
}