package model;

public interface Mapble {

    int getBoxColor(int x, int y);
}
