package ui;

import java.awt.*;

public class Config {
    public static final int WIDTH = 10;
    public static final int HEIGHT = 20;

    public static final int SIZE = 30;

    public static final Color[] COLORS = {
            Color.BLACK,
            Color.CYAN,
            Color.GREEN};
}
